fix spacing of about section

--- a/css/styles.css
+++ b/css/styles.css
@@ -79,7 +79,7 @@ li:hover {
 
 
 .about1 {
-	padding-bottom: 35px;
+	padding-bottom: 5px;
 }
 
 
